# SyncServer

./: CMakeLists.txt  CMakePresets.json  README.md
ExternalDeps/: CMakeLists.txt
ExternalDeps/BoostAsio/: CMakeLists.txt
proto/: echo.grpc.pb.cc  echo.grpc.pb.h  echo.pb.cc  echo.pb.h  echo.proto
src/: CMakeLists.txt  main.cpp  server.cpp
